--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,10 @@
     "express": "~4.15.5",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "mysql2": "^1.5.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^4.32.2",
     "serve-favicon": "~2.4.5"
   }
 }
