--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express": "~4.15.5",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "nodemon": "^1.14.12"
+    "nodemon": "^1.14.12",
     "sequelize": "^4.33.4",
     "serve-favicon": "^2.4.5"
   }
