added authentication framework

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "morgan": "~1.9.0",
     "mysql2": "^1.5.2",
     "nodemon": "^1.14.12",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^4.33.4",
     "serve-favicon": "^2.4.5"
   }
