--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
     },
     "/assets": {
       "target": "http://localhost:3001"
+    },
+    "/api": {
+      "target": "http://localhost:3001"
     }
   },
   "dependencies": {
