--- a/app/db/config.json
+++ b/app/db/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "password",
+    "password": "144037",
     "database": "rentmystuff",
     "host": "127.0.0.1",
     "dialect": "mysql"
