--- a/config/config.json
+++ b/config/config.json
@@ -19,5 +19,13 @@
     "database": "vvcx0eb3e6s7ilrt",
     "host": "x3ztd854gaa7on6s.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
+  },
+  "email": {
+    "service": "gmail",
+    "auth": {
+      "user": "recre.entals@gmail.com",
+      "pass": "cdjtcjms"
+    }
+
   }
 }
