--- a/config/config.json
+++ b/config/config.json
@@ -18,7 +18,8 @@
     "password": "ytwzwwxrj7trnnql",
     "database": "vvcx0eb3e6s7ilrt",
     "host": "x3ztd854gaa7on6s.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "use_env_variable": "JAWSDB_URL"
   },
   "email": {
     "service": "gmail",
