--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.5.2",
+    "nodemailer": "^4.6.0",
     "nodemon": "^1.14.12",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
