--- a/config/config.json
+++ b/config/config.json
@@ -19,7 +19,7 @@
     "database": "vvcx0eb3e6s7ilrt",
     "host": "x3ztd854gaa7on6s.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql",
-    "use_env_variable": "JAWSDB_URL"
+    "use_env_variable": "DATABASE_URL"
   },
   "email": {
     "service": "gmail",
