--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "passport-local": "^1.0.0",
     "sequelize": "^4.33.4",
     "serve-favicon": "^2.4.5"
+  },
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.1.x"
   }
 }
