--- a/package.json
+++ b/package.json
@@ -17,27 +17,26 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-      "axios": "^0.17.1",
-      "bcrypt": "^1.0.3",
-      "body-parser": "~1.18.2",
-      "cookie-parser": "~1.4.3",
-      "debug": "~2.6.9",
-      "express": "~4.15.5",
-      "express-session": "^1.15.6",
-      "jade": "~1.11.0",
-      "morgan": "~1.9.0",
-      "mysql2": "^1.5.2",
-      "nodemailer": "^4.6.0",
-      "passport": "^0.4.0",
-      "passport-facebook": "^2.1.1",
-      "passport-google-oauth": "^1.0.0",
-      "passport-local": "^1.0.0",
-      "sequelize": "^4.33.4",
-      "serve-favicon": "^2.4.5"
+    "axios": "^0.17.1",
+    "bcrypt": "^1.0.3",
+    "body-parser": "~1.18.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.15.5",
+    "express-session": "^1.15.6",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.0",
+    "mysql2": "^1.5.2",
+    "nodemailer": "^4.6.0",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^4.33.4",
+    "serve-favicon": "^2.4.5"
   },
   "engines": {
     "node": "0.8.x",
-    "npm": "1.1.x"
+    "npm": "^5.6.0"
   }
-
 }
