--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "~1.9.0",
     "mysql2": "^1.5.2",
     "nodemailer": "^4.6.0",
+
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
@@ -37,6 +38,6 @@
   },
   "engines": {
     "node": "0.8.x",
-    "npm": "^5.6.0"
+    "npm": "1.1.x"
   }
 }
