--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "server": "node app.js",
     "client": "node scripts/start-client.js",
     "start": "node app.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
     "build": "node scripts/build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
