--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "node app.js",
     "client": "node scripts/start-client.js",
-    "start": "concurrently \"nodemon app.js\" \"npm run client\"",
+    "start": "node app.js",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
     "build": "node scripts/build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
